# bachelors-thesis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  video_cocanternation.py
benchmarks/: README.md  detection_models_benchmark.ipynb
configs/: default.yaml
scripts/: concat_videos.py
src/traffic_analyzer/: config.py  detection.py  schemas.py  video_io.py
tests/: test_detection.py
